# datasheet

./: README.md  pyproject.toml
.github/workflows/: build.yaml
datasheets/: api.py  models.py
datasheets/models/: datasheet.py
src/: api.py
terminals/: api.py  models.py
test/: test_api.py
tests/: test_api.py
